# screeps-rust

./: .gitattributes  CLAUDE.md  Cargo.toml  TODO.md  package-lock.json
js_src/: allianceManager.js  crypt.js  main.js
src/: callbacks.rs  check.rs  checked_id.rs  claimer.rs  colony.rs  commands.rs  creeps.rs  domain_traits.rs  harvester.rs  id.rs  ids.rs  lib.rs  logging.rs  memory.rs  messages.rs  movement.rs  names.rs  pathfinding.rs  planner.rs  planning.rs  remote_build.rs  room.rs  safeid.rs  spawn.rs  statemachine.rs  structure.rs  tasks.rs  tower.rs  utils.rs  visuals.rs
src/colony/: lifecycle.rs  mod.rs  steps.rs
src/colony/plan/: diff.rs  execute.rs  mod.rs  visuals.rs
src/colony/planner/: center.rs  connectivity.rs  mod.rs  sources.rs  state.rs
src/colony/planning/: floodfill.rs  mod.rs  plan.rs  planned_ref.rs  planner.rs  steps.rs  visuals.rs
src/coordination/: allocations.rs  assignment.rs  collaboration.rs  expiring_map.rs  mod.rs  tasks.rs  workers.rs
src/creeps/: claimer.rs  dumptruck.rs  excavator.rs  fabricator.rs  flagship.rs  harvester.rs  mod.rs  remote_builder.rs  truck.rs  tugboat.rs  tugged.rs  virtual_creep.rs  worker.rs
src/creeps/bootstrap/: carrier.rs  mod.rs
src/creeps/fabricator/: coordinator.rs  mod.rs  state.rs  task.rs
src/creeps/truck/: coordinator.rs  import.rs  importer.rs  mod.rs  state.rs  stop.rs
src/movement/: mod.rs  requests.rs  simplifier.rs  solution.rs  solver.rs
src/new_tasks/: client_registry.rs  collaborative.rs  mod.rs  server.rs
src/spawn/: energy.rs  mod.rs  policies.rs  prototype.rs  roles.rs  roster.rs
