[package]
name = "screeps-starter-rust"
version = "0.0.0"
authors = []
edition = "2021"

[lints.clippy]
pedantic = "warn"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = { version = "0.23", features = ["mmo", "sim"] }
# If you'd like to use a locally-cloned out version of the game API crate
# (for testing PRs, etc), you can use a local path (replacing the above line):
#screeps-game-api = { path = "../screeps-game-api" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
itertools = "0.14.0"
serde_json_any_key = "2.0.0"
serde_json_path_to_error = "0.1.5"
derive_deref = "1.1.1"
unionfind = "0.2.1"
shlex = "1.3.0"
clap = { version = "4.5.58", features = ["derive"] }
tap = "1.0.1"
derive-alias = "0.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = ["-O4", "--signext-lowering"]

[features]
default = []

sim = ["screeps-game-api/sim"]
mmo = ["screeps-game-api/mmo"]
